# summer-of-making

./: .env.example  .erb_lint.yml  .gitignore  .rubocop.yml  AGENT.md  Dockerfile  Dockerfile.dev  Dockerfile.worker  Gemfile  README.md  config.ru  docker-compose.yml  genesis_payouts.csv  manifest.yaml  run_the_frickin_memory_check.sh  slack_manifest.yaml
.github/instructions/: main.instructions.md
.github/workflows/: ci.yml
app/channels/: balloons_channel.rb  shenanigans_channel.rb
app/components/: base.rb  button.rb  button_to.rb  card.rb  clickable_base.rb  container.rb  link.rb  styled_button.rb
app/controllers/: abstract_slack_blocks_controller.rb  application_controller.rb  attachments_controller.rb  campfire_controller.rb  comments_controller.rb  dashboard_controller.rb  (+27 more)
config/: anacrontab  application.rb  blazer.yml  brakeman.ignore  brakeman.yml  cable.yml  cache.yml  credentials.yml.enc  crontab  database.yml  deploy.yml  flipper_features.yml  game_constants.yml  honeybadger.yml  importmap.rb  puma.rb  queue.yml  recurring.yml  routes.rb  schedule.rb  skylight.yml  storage.yml
db/: schema.rb  seeds.rb
lib/: honeybadger_rate_limiter.rb  number_formatting.rb
mole/: .env.example  Dockerfile  Dockerfile.base  Dockerfile.chrome  app.py  docker-compose.yml  pyproject.toml  requirements.txt  test_browser.py  test_workers.cmd  test_workers.sh
public/: 404.html  422.html  500.html  flag-orpheus-top.avif  inlineshell.avif  orph_wow_prizes.avif  seas.avif  shell.avif  smiles.avif
script/: populate_high_seas_data.rb  test_genesis_payouts.rb
(+867 files in other folders)
